tests/parser/parse-while-let.4.bad.error
error: Malformed while-let expression
  --> test:4:38
   |
 4 |  (define f (while-let (Some x) = (moo)))
   |                                       ^ expected body
